--- a/themes/neopost/layouts/partials/style.css
+++ b/themes/neopost/layouts/partials/style.css
@@ -431,11 +431,20 @@ header h1 a:hover {
     box-shadow: var(--post-shadow-color) 5px 5px;
 }
 
+.toc-heading-info {
+    text-align: center;
+    margin: 10px;
+}
+
+.toc-item {
+    text-decoration: none;
+}
+
 .table-of-contents.sidebar {
     position: sticky;
     top: 1rem;
     height: fit-content;
-    width: 10rem;
+    width: 20rem;
     flex-shrink: 0;
     max-height: calc(100vh - 2rem);
     overflow-x: auto;
@@ -454,11 +463,13 @@ header h1 a:hover {
 
 .table-of-contents nav ul {
     margin: .5em 1em;
-    padding: 0;
+    padding: 0px;
 }
 
 .table-of-contents nav li {
     margin: .3em 0;
+    list-style-image: none;
+    list-style-type: none;
 }
 
 #single-post {
