--- a/themes/neopost/layouts/partials/style.css
+++ b/themes/neopost/layouts/partials/style.css
@@ -34,7 +34,7 @@ div.highlight {
 
 code {
     background-color: rgba(0,0,0,0.5);
-    color: white;
+    color: rgba(255,90,90);
     padding-left: 2px;
     padding-right: 2px;
 }
@@ -43,6 +43,7 @@ div.highlight code {
     background-color: rgba(0,0,0,0);
     padding-left: 0px;
     padding-right: 0px;
+    color: white;
 }
 
 :root {
