--- a/themes/neopost/layouts/_default/_markup/render-codeblock.html
+++ b/themes/neopost/layouts/_default/_markup/render-codeblock.html
@@ -5,12 +5,14 @@
   {{if isset .Attributes "script_name"}}
       {{- $opts = .Options -}}
 
-      <div class="highlight-toolbar">
+    <div class="highlight-toolbar">
       <span class="item">
         <span class="label">
           Shown: <span class="bold">{{ .Attributes.script_name }}</span> ({{ $lang }})
         </span>
       </span>
+
+      <button class="copy_script_bttn" onclick="copy_script(this)">Copy</button>
     </div>
   {{end}}
 
