codeblock presentation on mobile

--- a/themes/neopost/layouts/partials/style.css
+++ b/themes/neopost/layouts/partials/style.css
@@ -60,6 +60,7 @@ a,li,p,h1,h2,h3,h4,h5,h6 {
 div.highlight {
     border-style: solid;
     border-color: black;
+    overflow-x: auto;
 }
 
 div.highlight code {
