--- a/themes/neopost/layouts/partials/style.css
+++ b/themes/neopost/layouts/partials/style.css
@@ -3,14 +3,14 @@
 {{ $themeName := .Site.Params.theme }}
 {{ $theme := index (where .Site.Data.themes "name" $themeName) 0 }}
 
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 a,li,p,h1,h2,h3,h4,h5,h6 {
-    font-family: "Patrick Hand", cursive;
+    font-family: "Winky Rough";
 }
 
 .bold {
@@ -44,7 +44,7 @@ a,li,p,h1,h2,h3,h4,h5,h6 {
 .copy_script_bttn {
     background-color: rgb(128,90,128);
     border: none;
-    font-family: "Patrick Hand", cursive;
+    font-family: "Winky Rough";
     font-size: 1em;
     padding: 0.3em 0.6em;
 }
@@ -70,11 +70,16 @@ div.highlight code {
     color: white;
 }
 
+li code {
+    font-size: 0.8em;
+}
+
 code {
     background-color: rgba(0,0,0,0.5);
     color: rgba(255,128,255);
     padding: 2px;
     font-family: monospace;
+    font-size: 1em;
 }
 
 :root {
@@ -96,7 +101,7 @@ code {
 }
 
 #search {
-    --pagefind-ui-font: "Patrick Hand", cursive;
+    --pagefind-ui-font: "Winky Rough";
     --pagefind-ui-text: {{ index $theme "text-color" }};
     --pagefind-ui-background: {{ index $theme "bg-color" }};
     --pagefind-ui-border: {{ index $theme "post-outline-color" }};
@@ -142,8 +147,9 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
+    margin-top: 0;
     margin: 0.1;
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 
 a {
@@ -158,17 +164,12 @@ h1 {
 
 h2 {
     font-size: 32px;
-    text-decoration: wavy underline;
-    text-underline-offset: 8px;
 }
 
 h3 {
+    text-decoration: solid underline;
     font-size: 24px;
 }
-
-h4,
-h5,
-h6 {color: var(--special-text-color);}
 
 header {
     background-size: 100%;
