--- a/themes/neopost/layouts/tags/list.html
+++ b/themes/neopost/layouts/tags/list.html
@@ -5,7 +5,7 @@
         {{ range .Pages }}
         <li class="tag-item">
             <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-            <p> > {{ .Plain | safeHTML | truncate 250 }}</p>
+            <p> > {{ default (.Plain | safeHTML | truncate 250) .Description }}</p>
         </li>
         {{ end }}
     </ul>
