made the background for codeblocks not fuck up when scrolling horizontally

--- a/themes/neopost/layouts/partials/style.css
+++ b/themes/neopost/layouts/partials/style.css
@@ -70,6 +70,10 @@ div.highlight code {
     color: white;
 }
 
+div.highlight > pre {
+    min-width: fit-content;
+}
+
 li code {
     font-size: 0.8em;
 }
@@ -605,3 +609,4 @@ header h1 a:hover {
 }
 
 </style>
+
