--- a/themes/neopost/layouts/_default/baseof.html
+++ b/themes/neopost/layouts/_default/baseof.html
@@ -18,6 +18,7 @@
     <meta property="og:url" content="{{ .Site.BaseURL }}" />
     <meta property="og:image" content="/icon.png" />
     <meta property="og:description" content="{{ $description }}" />
+    <meta property="article:author" content="{{ $author }}" />
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary" />
@@ -25,6 +26,7 @@
     <meta property="twitter:title" content="{{ $title }}" />
     <meta property="twitter:description" content="{{ $description }}" />
     <meta property="twitter:image" content="/icon.png" />
+    <meta property="twitter:creator" content="{{ $author }}" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     
